recursion.lessons.recursion.koch.Koch.scala.error
Koch:15: error: not found: value snowSlide
	snowSlide(levels-1,length/3)
        ^Koch:23: error: not found: value snowFlake
		snowFlake(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Double]);
                ^