recursion.lessons.recursion.koch.Koch.scala.code

def snowSide(levels:Int, length:Double) {
if (levels==0) {
	avance(length)
}else if (levels==1){
	avance(length/3)
	gauche(60)
	avance(length/3)
	droite(120)
	avance(length/3)
	gauche(60)
	avance(length/3)
}else {
	snowSlide(levels-1,length/3)
}
}

